01-routing/k8s/v1/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adder
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: adder
  template:
    metadata:
      labels:
        tier: adder
    spec:
      containers:
        - name: adder
          image: alexandreroman/scg-workshop-routing-adder
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: 512Mi
            limits:
              memory: 1Gi
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              port: http
              path: /actuator/health/liveness
            failureThreshold: 3
            periodSeconds: 1
          startupProbe:
            httpGet:
              port: http
              path: /actuator/health/readiness
            failureThreshold: 30
            periodSeconds: 10
          volumeMounts:
            - mountPath: /etc/config/app
              name: app
      volumes:
        - name: app
          configMap:
            name: app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greetings
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: greetings
  template:
    metadata:
      labels:
        tier: greetings
    spec:
      containers:
        - name: greetings
          image: alexandreroman/scg-workshop-routing-greetings
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: 512Mi
            limits:
              memory: 1Gi
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              port: http
              path: /actuator/health/liveness
            failureThreshold: 3
            periodSeconds: 1
          startupProbe:
            httpGet:
              port: http
              path: /actuator/health/readiness
            failureThreshold: 30
            periodSeconds: 10
          volumeMounts:
            - mountPath: /etc/config/app
              name: app
      volumes:
        - name: app
          configMap:
            name: app
