01-routing/k8s/v1/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: adder
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: http
  selector:
    tier: adder
---
apiVersion: v1
kind: Service
metadata:
  name: greetings
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: http
  selector:
    tier: greetings
