01-routing/k8s/v1/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway
spec:
  rules:
    - host: routing.scg.withtanzu.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: gateway
                port:
                  number: 80
